--- a/AnalyticStructure_main.tex
+++ b/AnalyticStructure_main.tex
@@ -11,8 +11,8 @@
 \usepackage{tikz}
 \usepackage{xifthen}
 %\pgfplotsset{compat=1.15}
-%\usepackage[markup=underline]{changes}
-\usepackage[final]{changes}
+\usepackage[markup=underline]{changes}
+%\usepackage[final]{changes}
 \definechangesauthor{dal}
 \definechangesauthor{gen}
 
@@ -129,26 +129,25 @@ approximations on the scientific outcomes of the simulation.
 \maketitle
 
 \section{Introduction}
-\deleted[id=gen]{%
-Since the days of their foundations, disciplines like Computational Physics or Quantum Chemistry always had to deal with the problem of the
-computational reliability of the results. More specifically, a computational result may be considered reliable for various reasons.
-For example, it may be in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
-The model itself may in this way be classified as ``accurate''; it can then be employed to extract, \textit{in silico},
-other quantities that might be then used to \emph{predict} or \emph{interpret} experiments.
-Another concept of reliability is the concept of  ``precision'', which is more focused to the actual results
-that a given computational model provides for a specific set of quantities, regardless of their potential agreement with
-experimental data. The aim of precise computational approach is to reduce the \emph{computational} uncertainties
-of quantities extracted out of a well-defined model, and provide reference results, to which other computer codes
-employing the same model can be compared.
-%
-A recent, remarkable example of precision-driven initiative is provided by the DeltaCodes project~\cite{deltaTest2016},
-where a grassroot community of code-owners struggled to extract well-defined computational results in the context of
-Density Functional Theory (DFT) calculations. Ground-State quantum mechanical quantities as lattice constants and bulk modulus of
-elementary crystals extracted from different codes were compared with each other, with the objective of reducing the uncertainties
-on such data, and in some sense, to define a \emph{calibration} procedure for a Solid-State Physics DFT code.
-Any other code able to extract the same quantities with the same approximations may be compared with the
-results of the community in order to assess its computational reliability.
-}
+
+% Since the days of their foundations, disciplines like Computational Physics or Quantum Chemistry always had to deal with the problem of the
+% computational reliability of the results. More specifically, a computational result may be considered reliable for various reasons.
+% For example, it may be in agreement with some previous observation or measurement that the employed computational model is susceptible to reproduce.
+% The model itself may in this way be classified as ``accurate''; it can then be employed to extract, \textit{in silico},
+% other quantities that might be then used to \emph{predict} or \emph{interpret} experiments.
+% Another concept of reliability is the concept of  ``precision'', which is more focused to the actual results
+% that a given computational model provides for a specific set of quantities, regardless of their potential agreement with
+% experimental data. The aim of precise computational approach is to reduce the \emph{computational} uncertainties
+% of quantities extracted out of a well-defined model, and provide reference results, to which other computer codes
+% employing the same model can be compared.
+% 
+% A recent, remarkable example of precision-driven initiative is provided by the DeltaCodes project~\cite{deltaTest2016},
+% where a grassroot community of code-owners struggled to extract well-defined computational results in the context of
+% Density Functional Theory (DFT) calculations. Ground-State quantum mechanical quantities as lattice constants and bulk modulus of
+% elementary crystals extracted from different codes were compared with each other, with the objective of reducing the uncertainties
+% on such data, and in some sense, to define a \emph{calibration} procedure for a Solid-State Physics DFT code.
+% Any other code able to extract the same quantities with the same approximations may be compared with the
+% results of the community in order to assess its computational reliability.
 
 For a theoretical approach that is based on numerical calculations, for which no analytic reference solution exists,
 reducing the computational uncertainty is the only possible way to shed light on the predictivity power of the
@@ -173,11 +172,10 @@ and quantify their computational uncertainty.
 In this paper, we focus our attention to Linear-Response treatments of \emph{molecular} systems,
 in particular referring to LR-TDDFT calculation. We will investigate the impact that
 \emph{open} (i.e. Isolated) Boundary Conditions (BC) that have to be imposed to the system will have on the computational evaluation of LR quantities.
-\deleted[id=gen]{In order to do this}We perform analytic considerations on the equations beyond LR treatment and discuss the interplay between reproducible LR quantities and the \emph{locality} of the related objects. Such considerations will enable us to distinguish quantities that \textit{a priori} can be compared among different treatments - and therefore tested for reproducibility - from others that would \emph{explicitly} depend of the employed computational treatment.
+We perform analytic considerations on the equations beyond LR treatment and discuss the interplay between reproducible LR quantities and the \emph{locality} of the related objects. Such considerations will enable us to distinguish quantities that \textit{a priori} can be compared among different treatments - and therefore tested for reproducibility - from others that would \emph{explicitly} depend of the employed computational treatment.
 
-\added[id=dal]{This analysis evidences that the description of molecular systems beyond the ground state unavoidably leads to the inclusion of delocalized
-degrees of freedom above a specific energetic threshold. Moreover on the basis of this analysis we can assess something about the reliability of the results provided by computational setups able to explicit include the presence of delocalized degrees of freedom compared
-to the ones in which these degrees of freedom are excluded by design.}
+This analysis evidences that the description of molecular systems beyond the ground state unavoidably leads to the inclusion of delocalized degrees of freedom above a specific energetic threshold. Moreover on the basis of this analysis we can assess something about the reliability of the results provided by computational setups able to explicit include the presence of delocalized degrees of freedom compared
+to the ones in which these degrees of freedom are excluded by design.
 
 The paper is organized as follows.
 Initially we will inspect how the question of reproducibility may be expressed
@@ -198,11 +196,11 @@ approaches, in the context of Quasi-Particle equations.
 \subsection{Long range behavior of the eigenvalue solution of the Schr\"odinger equation}
 \label{SEopenSystem}
 
-\replaced[id=dal]{Let us start our discussion by reviewing some well-known concepts of quantum mechanic under a perspective that
-will turn out to be very useful in the forthcoming considerations about linear-response quantities. In particular we revisit the impact
-that the Isolated BC have on the solutions of the Schr\"odinger Equation.}{Let us start our discussion by revisiting the
-impact that the Isolated BC have on the solutions of the time-independent Schr\"odinger Equation. We here present well-known concepts of
-quantum mechanics, under a perspective that will turn out to be very useful in the forthcoming considerations about linear-response quantities.}
+% {Let us start our discussion by revisiting the
+% impact that the Isolated BC have on the solutions of the time-independent Schr\"odinger Equation. We here present well-known concepts of
+% quantum mechanics, under a perspective that will turn out to be very useful in the forthcoming considerations about linear-response quantities.}
+Let us start our discussion by reviewing some well-known concepts of quantum mechanic under a perspective that
+will turn out to be very useful in the forthcoming considerations about linear-response quantities. In particular we revisit the impact that the Isolated BC have on the solutions of the Schr\"odinger Equation.
 
 Consider a (one-body) wavefunction $\ket{\psi}$ solution of the equation
 $\op H\ket{\psi}=\eps\ket{\psi}$, where we split the Hamiltonian operator into the sum of
@@ -249,9 +247,8 @@ Being discrete and well-identified, the bound-state energies are a property of t
 quantities. The values of their energies can be compared among different treatments and it is in principle possible to
 provide reference results on them.
 
-
 On the other hand, positive energy solutions behave differently.
-Even though the potential is localized \replaced[id=dal]{the associated Helmholtz kernel is a spherical wave and its}{, their positive energy are spherical waves and the} convolution with the source term provides a delocalized wavefunction $\psi(\r)$ in the whole space.
+Even though the potential is localized the associated Helmholtz kernel is a spherical wave and its convolution with the source term provides a delocalized wavefunction $\psi(\r)$ in the whole space.
 As they cannot be normalized they belong to the essential spectrum of the Hamiltonian operator and form a \emph{continuum} of states.
 Outside of the support of the $\ket{\op V \psi}$ the solutions of Eq.~\eqref{SEHelmholtz1} can be put in bijection with the eigenstates of the
 free-particle Hamiltonian $\op H_s$. For positive energies, the quantum numbers of the eigenstates are determined by the Laplacian operator,
@@ -324,9 +321,7 @@ response density parametrized as
 \ee
 Here we have introduced the set of $\omega$-dependent \emph{fluctuation states} (FS)
 $\ket{f_p^\Phi(\omega)} = \dm'_\Phi(\omega) \ket{\psi_p}$, that have values in the unoccupied subspace of $\hnot$.
-\added[id=gen]{
-However, non-hermiticity of $\dm'_\Phi(\omega)$ implies that the
-fluctuation states are complex quantities.}
+However, non-hermiticity of $\dm'_\Phi(\omega)$ implies that the fluctuation states are complex quantities.
 %  Causality implies that the real and imaginary part of FS are related each other by the Kramers-Kronig relations}
 % \be\lb{KKrel}
 % \mathrm{Re}\left( \ket{f_p^\Phi(\omega)} \right) =
@@ -352,20 +347,17 @@ $
 \ket{s_p^\Phi(\omega)} = \op Q_0(\op \Phi(\omega) +\op V'[\dm'_\Phi](\omega) )\ket{\psi_p}
 $ as a source term.
 
-\replaced[id=dal]{Equation \eqref{rhoPrimeFluctuationStateDef2} is the convenient starting point to assess the localization properties of the FS as it is easy to see that, for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level that governs the asymptotic behavior of the associated Helmholtz kernel.}{It can be seen that for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level
-that governs the localization properties of the FS.}
-As a ulterior \emph{stringent} hypothesis, let us now assume that the source term $\ket{s_p^\Phi(\omega)}$ is \added[id=dal]{spatially} localized, \textit{i.e.} its evaluation can be restricted on a bounded real-space domain.
+Equation \eqref{rhoPrimeFluctuationStateDef2} is the convenient starting point to assess the localization properties of the FS as it is easy to see that, for each choice of $p$, the value $\omega = |\eps_p|$ represents the threshold level that governs the asymptotic behavior of the associated Helmholtz kernel.
+As a ulterior \emph{stringent} hypothesis, let us now assume that the source term $\ket{s_p^\Phi(\omega)}$ is spatially localized, \textit{i.e.} its evaluation can be restricted on a bounded real-space domain.
 Even when such locality argument holds true, for $\omega > |\eps_p|$,
 the Helmholtz kernel behaves as a spherical wave and  gives raise to a $\ket{f^\Phi_p(\omega)}$ which is \emph{delocalized} in the entire real-space domain.
 Such delocalization is an intrinsic consequence of the value of $\omega$, and does not depend on the particular choice of
 $\op \Phi$.
 Only for $\omega < |\eps_p|$ the kernel contains an exponential damping factor and $\ket{f^\Phi_p(\omega)}$ exhibits a bound-state behavior in the long range,
 once again provided that the above locality arguments on $\ket{s_p^\Phi(\omega)}$ -- hence on $\op V'$ and $\Phi$ -- are valid.
-\added[id=gen]{These arguments demonstate that for frequencies above the IP threshold energy, the
+These arguments demonstrate that for frequencies above the IP threshold energy, the
 response density operator cannot be expressed in terms of localized states. Locality of
-FS (and therefore of $\dm'_\Phi(\omega)$) can be only recovered for frequencies below such threshold.}
-
-\deleted[id=dal]{Added a subsection for static perturbations}
+FS (and therefore of $\dm'_\Phi(\omega)$) can be only recovered for frequencies below such threshold.
 
 \subsection{Localized behavior for static perturbations}
 The locality property of the fluctuation state can be directly confirmed for static perturbations at $\omega=0$.
@@ -406,9 +398,7 @@ the size of the computational domain used to express the fluctuation states. The
 one of the static dipole of the molecule computed at zero external field.
 The results evidence that the typical sizes of $\ket{f^\Phi_p(0)}$ are analogous to the ones of the unperturbed KS orbitals, which is a direct proof of the bound-state behaviour of the FS.
 
-\deleted[id=dal]{Modified the name of the subsection}
-
-\subsection{Localization propeties at finite $\omega$. Emergence of a strong and a weak regime}
+\subsection{Localization properties at finite $\omega$. Emergence of a strong and a weak regime}
 
 %\subsection{Strong and weak convergence at finite $\omega$}
 
@@ -416,17 +406,16 @@ The analysis described above has shown that the building blocks of the response 
 are susceptible to exhibit bound-state long-range behavior \emph{only} when $\omega < |\eps_p|$,
 while they behave as unbound states for values of $\omega$ above the threshold levels.
 This fact has interesting implications in the evaluation of LR quantities. Indeed, writing the response
-density in terms of FS implies that \deleted[id=dal]{(equation for the response density modified)}
-% \be\lb{LinearResponseFunctDef2}
-% \braket{\delta\op O}_\Phi(\omega) = 2 \mathrm{Re} \left(\sum_p \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}\right) \;.
-% \ee
-\begin{multline}\lb{LinearResponseFunctDef2}
-\braket{\delta\op O}(\omega) = \sum_p \left( \bra{f_p^\Phi(-\omega)}\op O\ket{\psi_p}+ \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}\right) \\
-=2 \sum_p\bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}  \;.
-\end{multline}
-In the second equality we have assumed that $\op O$ is a real symmetric operator and chosen a real set of occupied molecular states.
-Let us suppose that also the observable of interest $\op O$ \replaced[id=gen]{may be restricted to localized domains in the same way as the potentials $ \op V$ and $\op \Phi$.}{exhibits the locality properties introduced for the potentials $ \op V$, $\op \Phi$ and $\op V'$.}
-Once again, it would be enough to consider a local operator for this condition to be met.
+density in terms of FS implies that
+% \begin{align}\lb{LinearResponseFunctDef2}
+% \braket{\delta\op O}_\Phi(\omega) = &\sum_p \left( \bra{f_p^\Phi(-\omega)}\op O\ket{\psi_p}+ \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}\right) \nn \\
+% = &2 \sum_p\bra{\psi_p}\op O\ket{f_p^\Phi(\omega)}  \;,
+% \end{align}
+\be\lb{LinearResponseFunctDef2}
+\braket{\delta\op O}_\Phi(\omega) = 2 \sum_p \bra{\psi_p}\op O\ket{f_p^\Phi(\omega)} \;,
+\ee
+where we have assumed that $\op O$ is a real symmetric operator and chosen a real set of occupied molecular states.
+Let us suppose that also the observable of interest $\op O$ may be restricted to localized domains in the same way as the potentials $ \op V$ and $\op \Phi$. Once again, it would be enough to consider a local operator for this condition to be met.
 
 Two
 distinct regimes can be identified, on the basis of value of $\omega$.
@@ -450,10 +439,10 @@ In this case a computational description of fluctuation states is only meaningfu
 where the bound state character of $\{\bra{\psi_p}\op O\}$ behaves as a regulator.
 This is naturally achieved in the above mentioned Krylov space treatments, which
 explicitly deal with the expression of the scalar products.
-\added[id=gen]{However, in this regime, imposing \emph{by design} a localized
+However, in this regime, imposing \emph{by design} a localized
 behaviour of the FS might reveal very dangerous in view of convergence of the results:
 the computational basis set have to be able to express in the support domain of $\{\bra{\psi_p}\op O\}$ a asymptotically delocalized FS. The degrees of completeness
-of the computational basis should therefore be increased by imposing oscillatory degrees of freedom needed to represent the FS at the border of the simulation domain: it is important that the underlying basis set is able to express delocalised states.}
+of the computational basis should therefore be increased by imposing oscillatory degrees of freedom needed to represent the FS at the border of the simulation domain: it is important that the underlying basis set is able to express delocalised states
 
 These considerations prove why, when a given computer code employs established GS numerical techniques,
 \emph{it is much easier to converge LR quantities for $\omega$ below IP}.
@@ -466,11 +455,11 @@ The IP threshold has an evident physical interpretation: for energies in a range
 localized and delocalized states might be coupled by the perturbation. Obtaining convergence of the observable quantities at these energies is therefore much more challenging if one employs
 numerical techniques which were originally tailored for GS calculations.
 
-As an example in support of these arguments we compare the \replaced[id=dal]{dynamical polarizability $\alpha(\omega)$}{absorption spectrum} of a $CO$ molecule computed in three distinct real-space computational setups, which differs for the dimension of the computational domain.
-Results reported in \replaced[id=dal]{the two panels of figure \ref{co_spectrum} show the real and imaginary part of $\alpha(\omega)$, respectively. In all the cases a typical behavior emerges}{evidences a typical behavior}: the curves are almost coincident in the below threshold regime,
+As an example in support of these arguments we compare the dynamical polarizability $\alpha(\omega)$ of a $CO$ molecule computed in three distinct real-space computational setups, which differs for the dimension of the computational domain.
+Results reported in the two panels of figure \ref{co_spectrum} show the real and imaginary part of $\alpha(\omega)$, respectively. In all the cases a typical behavior emerges: the curves are almost coincident in the below threshold regime,
 whereas the effect of the computational setup are clearly visible for values of  $\omega$ that exceed the threshold value.
-For these high-frequency regions, convergence might be reached for domains of much larger sizes than what presented here~\cite{baroni2008},
-which are -- as already noticed -- more than sufficient below threshold.
+For these high-frequency regions, convergence might be reached for domains of much larger sizes than what presented here~\cite{baroni2008}, which are -- as already noticed -- more than sufficient below 
+threshold\footnote{Add the convergence domain for the benzene molecule by looking at the results of...}.
 
 \begin{figure}
 \centering
@@ -484,25 +473,18 @@ sizes of the simulation domain. The top panel displays the real part and the bot
 is indicated by a vertical dashed line.}
 \end{figure}
 
-% \begin{figure}
-% \includegraphics[scale=0.6]{Fig2_CO_spectrum.eps}
-% \caption{\label{co_spectrum}(Color online) Illustrative LR absorption spectra of the $CO$ molecule in computational setups with different sizes of the simulation domain.
-% The value of the IP threshold is indicated by a vertical dashed line.}
-% \end{figure}
-
 \section{Excitation operators. The analytic structure of the susceptibility functional}
 
-\added[id=dal]{It is possible to reformulate this type of analysis by directly looking at LR quantities that are defined independently from the perturbing operators and target observables. This can be achieved by studying the
-\emph{susceptibility functional}, defined implicitly trough the operator equation}
-\deleted[id=dal]{
-In view of reproducibility, the scalar product of Eq.~\eqref{LinearResponseFunctDef1}, defining the observable fluctuation, may be compared among various numerical treatments.
-However, even though directly related to experimental results, such quantity is not by itself a property of the molecule, as it is a function of $\omega$ that explicitly depends
-on the perturbation operator $\op \Phi$, not to mention the target observable $\op O$. Alternatively, we may consider only the fluctuation state, but it is still a $\op \Phi$-dependent wavefunction,
-with a potential local behavior only for $\omega$ below the ionization threshold. Hence, comparing fluctuation states among diverse numerical treatments would be a
-challenging task.}
-\deleted[id=dal]{It is therefore much more interesting to concentrate on LR quantities that are defined independently from the perturbing operators and target observables.
-This can be achieved by studying the
-\emph{susceptibility functional}, defined implicitly trough the operator equation}
+It is possible to reformulate this type of analysis by directly looking at LR quantities that are defined independently from the perturbing operators and target observables. This can be achieved by studying the
+\emph{susceptibility functional}, defined implicitly trough the operator equation
+% In view of reproducibility, the scalar product of Eq.~\eqref{LinearResponseFunctDef1}, defining the observable fluctuation, may be compared among various numerical treatments.
+% However, even though directly related to experimental results, such quantity is not by itself a property of the molecule, as it is a function of $\omega$ that explicitly depends
+% on the perturbation operator $\op \Phi$, not to mention the target observable $\op O$. Alternatively, we may consider only the fluctuation state, but it is still a $\op \Phi$-dependent wavefunction,
+% with a potential local behavior only for $\omega$ below the ionization threshold. Hence, comparing fluctuation states among diverse numerical treatments would be a
+% challenging task.
+% It is therefore much more interesting to concentrate on LR quantities that are defined independently from 
+% the perturbing operators and target observables. This can be achieved by studying the \emph{susceptibility
+%functional}, defined implicitly trough the operator equation
 \be\lb{SusceptibilityDef1}
 \dm'(\omega) = \left(\omega -\mathcal L \right)^{-1} \commutator{\op \Phi(\omega)}{\dmnot} = \sop{{\cal \chi}}(\omega) \op\Phi(\omega) \;.
 \ee
@@ -516,8 +498,8 @@ together with the operator orthonormalization condition %$\trace{\op{\tilde E}\o
 \be\lb{orthoExcitatioOpDef1}
 \trace{\op{\tilde E}_a\op E_b} = \delta_{ab} \;.
 \ee
-Excitations defined in that way may be considered as a basis of the operators that satisfy the transverse condition as in
-Eq.~\eqref{RhopTransverseDef1}, and enable us to express the susceptibility as a spectral decomposition:
+Excitations defined in that way represent an operator basis that satisfy the transverse condition as in
+Eq.~\eqref{RhopTransverseDef1} (see appendix \ref{LiouvillianAction}), and enable us to express the susceptibility as a spectral decomposition:
 \be\lb{RhopExcitationDef1}
 \sop{{\cal \chi}}(\omega) \cdot   = \sum_{\{a\}} \op E_{a} \,
 \frac{\trace{\commutator{\op{\tilde E}_a}{\dmnot}\cdot}}{\omega-\Omega_a} \;.
