--- a/Response_referees.tex
+++ b/Response_referees.tex
@@ -41,6 +41,18 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+List of major changes apported to the paper:
+\begin{itemize}
+ \item The introduction has been deeply revised. In particular we have cut the first two
+ paragraph concerning the differences between accuracy and precision.
+ \item Added a comment after eq. (7) on the non-hermiticity of the response density and corrected
+ the equation (11).
+ \item Added a dedicated subsection (actually the IIA at page 4)  to discuss the localization properties of the FS states for static perturbations. 
+ \item Added a panel in figure 2 that contain the plot of the real part of $\alpha(\omega)$ in calculated in different computational domain. This new plot aims to evidence that the localization
+ properties of th FS affect, on equal footing, both the real and the imaginary part of the linear response functional.
+ \item The relation between localization properties and features of the computational basis needed to provide precise results has been discussed in a stronger way in all the text. Major modifications under this perspective have been done in section II before the analysis of fig. 2 and....
+\end{itemize}
+
 
 \section*{Response to the first referee}
 
